# folder-to-s3-rs

./: Cargo.toml  LICENSE-MIT  README.md  azure-pipelines.yml
src/: main.rs
