[package]
name = "folder-to-s3"
version = "0.1.0"
authors = ["Jayson Reis <santosdosreis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
failure = "0.1.6"
md5 = "0.7.0"
rusoto_core = "0.41.0"
rusoto_s3 = "0.41.0"
structopt = "0.3.3"
url = "2.1.0"
